--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         // ==========================================
         // ▼ 請在這裡貼上您的 Google Apps Script 網址 ▼
         // ==========================================
-        const GOOGLE_SCRIPT_URL = "您的_GOOGLE_SCRIPT_網址_放在這裡"; 
+        const GOOGLE_SCRIPT_URL = "AKfycbzGeh9uUcX6xZEw_ADPkbHDBdBTny2prAQewbzqSUzTqQm8oT3WVPhu0YosrZRhA3dESQ  "; 
         
         // ▼ 這是加密密碼 (必須與 Google Script 裡的一樣) ▼
         const SECRET_KEY = "MyShop2024";
