--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         // ==========================================
         // ▼ 請在這裡貼上您的 Google Apps Script 網址 ▼
         // ==========================================
-        const GOOGLE_SCRIPT_URL = "AKfycbzGeh9uUcX6xZEw_ADPkbHDBdBTny2prAQewbzqSUzTqQm8oT3WVPhu0YosrZRhA3dESQ  "; 
+        const GOOGLE_SCRIPT_URL = " https://script.google.com/macros/s/AKfycbxvh49Lk3nlyEPx870KzoyO-EzC8bpuZkyENgZuTaJ_p8wftbo6dL437DKypXdLt6NMqg/exec "; 
         
         // ▼ 這是加密密碼 (必須與 Google Script 裡的一樣) ▼
         const SECRET_KEY = "MyShop2024";
